--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "html",
+  "name": "2018_YANNICK",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -110,6 +110,10 @@
     {
       "path": "pug/index.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "js/index.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     }
   ],
   "fileTree": {
@@ -117,8 +121,7 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "css",
-      "sass"
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -238,7 +241,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7883,
+    "port": 7884,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -264,7 +267,6 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
-      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
@@ -314,7 +316,7 @@
   },
   "file-type-pug": "{\"compilers\":[\"pug\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":\"../html\",\"relative\":\"../\"},\"outputSuffix\":null}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"replaceSegments\":[]},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"autoCompile\":false}",
-  "file-type-javascript": "{\"autoCompile\":false,\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-javascript\":{\"mangle\":true},\"compiler-babel\":{\"enabled\":false},\"sourceMap\":false,\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegments\":[],\"replaceSegmentsWith\":[],\"relative\":\"\"},\"outputSuffix\":\"-dist\",\"compiler-concat-js\":{\"enabled\":true}}",
+  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"replaceSegments\":[],\"relative\":\"../bundle/\"},\"outputSuffix\":\"\",\"autoCompile\":false,\"compiler-javascript\":{\"mangle\":true}}",
   "file-type-stylus": "{\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-stylus\":{\"nib\":false,\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"}}",
   "file-type-markdown": "{\"autoCompile\":true,\"compiler-markdown\":{\"sanitize\":false,\"gfm\":true,\"wrapWithHtml\":false,\"enabled\":true,\"githubFlavored\":true},\"compilers\":[\"markdown\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "file-type-haml": "{\"autoCompile\":true,\"compiler-haml\":{\"pretty\":true,\"doubleQuotes\":false,\"enabled\":true,\"doubleQuoteAttributes\":true},\"compilers\":[\"haml\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
