--- a/prepros-6.config
+++ b/prepros-6.config
@@ -57,7 +57,7 @@
     },
     {
       "path": "css/style.css",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"css/style-dist.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"compiler-css\":{\"path\":\"css/style.css\"}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"bundle/style.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-css\":{\"path\":\"css/style.css\"}}"
     },
     {
       "path": "js/vendor/jquery-2.2.0.min.js",
@@ -114,6 +114,10 @@
     {
       "path": "js/index.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "css/self.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
@@ -121,7 +125,8 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "js"
+      "js",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -315,7 +320,7 @@
     "browsers": "last 2 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":\"../html\",\"relative\":\"../\"},\"outputSuffix\":null}",
-  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"replaceSegments\":[]},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"autoCompile\":false}",
+  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"replaceSegments\":[],\"relative\":\"../bundle/\"},\"outputSuffix\":\"\",\"compiler-cssnext\":{\"enabled\":true},\"autoCompile\":false}",
   "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"replaceSegments\":[],\"relative\":\"../bundle/\"},\"outputSuffix\":\"\",\"autoCompile\":false,\"compiler-javascript\":{\"mangle\":true}}",
   "file-type-stylus": "{\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-stylus\":{\"nib\":false,\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"}}",
   "file-type-markdown": "{\"autoCompile\":true,\"compiler-markdown\":{\"sanitize\":false,\"gfm\":true,\"wrapWithHtml\":false,\"enabled\":true,\"githubFlavored\":true},\"compilers\":[\"markdown\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
