更新css、js加上打頭、更新兩個外連網址、給客戶v7

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,7 +37,7 @@
     },
     {
       "path": "sass/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-sass\":{\"path\":\"sass/style.scss\",\"libSass\":true,\"compass\":true,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-sass\":{\"path\":\"sass/style.scss\",\"libSass\":true,\"compass\":true,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     },
     {
       "path": "jade/index.jade",
@@ -125,8 +125,7 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "js",
-      "css"
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
