issue修正、給客戶v9

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -125,7 +125,8 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "js"
+      "js",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
